--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+#PDB file
+*.pdb
+
+#OBJ files
+*.obj
+
 # Windows shortcuts
 *.lnk
 
@@ -41,3 +47,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.pdb
+*.ipch
+*.ilk
+*.sdf
+*.suo
+*.obj
+*.pch
+*.tlog
+*.log
